syntax = "proto3";

option java_package = "com.example.grpcclient.proto";
option java_outer_classname = "MakePDFProto";
option java_multiple_files = true;

package makepdf;

// The PDF generation service definition.
service MakePDF {
  
  // generate a PDF
  rpc GeneratePDF (GeneratePDFRequest) returns (GeneratePDFReply);

  // bi-directional streaming for batch PDF generation
  rpc StreamPDFs (stream GeneratePDFRequest) returns (stream GeneratePDFReply);
}

// The request message containing the user's name.
message GeneratePDFRequest {
  string firstName = 1;
  string lastName = 2;
}

// The response message containing the greetings.
message GeneratePDFReply {  
  bytes pdf = 1;
}